# autotests-ui

./: .env  .gitignore  config.py  index.html  playwright_authorization.py  playwright_courses.py  playwright_disabled.py  playwright_events.py  playwright_js.py  playwright_keyboard.py  playwright_registration.py  playwright_registration_button.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
12/: index.html
12/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: duration-trend.json
12/widgets/: categories-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
13/: index.html
13/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt  prometheusData.txt
13/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
13/widgets/: environment.json  executors.json  severity.json  summary.json  (+1 more)
14/: index.html
components/: base_component.py
elements/: base_element.py  button.py  file_input.py  input.py  textarea.py
fixtures/: browsers.py  pages.py
last-history/: history.json  retry-trend.json
pages/: base_page.py  courses_list_page.py  create_course_page.py  dashboard_page.py  login_page.py  registration_page.py
templates/: index.html
tests/: conftest.py  test_authorization.py  test_courses.py  test_dashboard.py  test_fixtures.py  test_parametrization.py  test_registration.py  test_usefixtures.py
(+113 files in other folders)
