[project]
name = "autotests-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "Olya Radkovich",email = "olga.radkovich@innowise.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.56.0,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "pytest-rerunfailures (>=16.1,<17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
