[project]
name = "autotests-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "Olya Radkovich",email = "radkovich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.56.0,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "pytest-rerunfailures (>=16.1,<17.0)",
    "allure-pytest (>=2.15.3,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
